Fixed some issue on tutorials page; included outputs for BE/GQSP tutorials

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ebec0e6",
    "metadata": {},
    "outputs": [],
@@ -116,10 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "341a06dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0: 0.4900000153295707, 3.0: 0.48999992592259706, 1.0: 0.010000029373916136, 2.0: 0.010000029373916136}\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
@@ -166,10 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "37aa950d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'cx': 12, 'gphase': 4, 'u3': 4, 'rx': 2, 'p': 2, 'cz': 6, 'x': 8}, 'depth': 33, 'qubits': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "qv = operand_prep()\n",
     "\n",
@@ -187,10 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3b7698cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 1: {'gate counts': {'cx': 4, 'x': 5, 'gphase': 3, 'u3': 2, 'z': 1, 'cz': 2}, 'depth': 16, 'qubits': 4}\n",
+      "k = 2: {'gate counts': {'cx': 8, 'x': 10, 'gphase': 6, 'u3': 4, 'z': 2, 'cz': 4}, 'depth': 32, 'qubits': 4}\n",
+      "k = 3: {'gate counts': {'cx': 12, 'x': 15, 'gphase': 9, 'u3': 6, 'z': 3, 'cz': 6}, 'depth': 48, 'qubits': 4}\n",
+      "k = 4: {'gate counts': {'cx': 16, 'x': 20, 'gphase': 12, 'u3': 8, 'z': 4, 'cz': 8}, 'depth': 64, 'qubits': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "for k in range(1, 5):\n",
     "    qv = operand_prep()\n",
@@ -237,10 +264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bc38a43f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ground state energy estimate: -2.3669872085929753                               \n",
+      "Exact Ground state energy: -2.3680339887499047\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import QuantumVariable\n",
     "from qrisp.algorithms.lanczos import lanczos_alg\n",
@@ -345,10 +381,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0835474d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                              \n",
+      " [0.02711482 0.55709842 0.5303515  0.63846176]\n",
+      "CLASSICAL SOLUTION\n",
+      " [0.02944539 0.55423278 0.53013239 0.64102936]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from qrisp import prepare, QuantumFloat\n",
@@ -410,10 +457,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bce4e592",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'gate counts': {'cx': 3515,\n",
+       "  't_dg': 1548,\n",
+       "  'gphase': 50,\n",
+       "  'ry': 2,\n",
+       "  's_dg': 70,\n",
+       "  't': 1173,\n",
+       "  'u3': 750,\n",
+       "  'z': 12,\n",
+       "  'p': 193,\n",
+       "  'cz': 150,\n",
+       "  'h': 890,\n",
+       "  'cy': 50,\n",
+       "  'x': 377,\n",
+       "  's': 70},\n",
+       " 'depth': 5134,\n",
+       " 'qubits': 23}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "BA = BlockEncoding.from_array(A)\n",
     "BE_CKS = CKS(BA, 0.01, kappa)\n",
@@ -525,10 +605,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3f8f1250",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                              \n",
+      " [0.02986315 0.57992487 0.62416743 0.52269529] \n",
+      "CLASSICAL SOLUTION\n",
+      " [-0.02986321  0.57992485  0.6241675   0.52269522]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from qrisp import *\n",
@@ -582,10 +673,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7cda9d58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                              \n",
+      " [0.0271197  0.55708097 0.53034627 0.63848113] \n",
+      "CLASSICAL SOLUTION\n",
+      " [0.02944539 0.55423278 0.53013239 0.64102936]\n"
+     ]
+    }
+   ],
    "source": [
     "# Assuming A and b are defined as above\n",
     "kappa = np.linalg.cond(A)\n",
@@ -622,10 +724,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "31af7a24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'cx': 3471, 't_dg': 1548, 'gphase': 50, 's_dg': 48, 't': 1173, 'u3': 750, 'rx': 13, 'p': 149, 'cz': 150, 'h': 846, 'cy': 50, 'x': 399, 's': 48}, 'depth': 5134, 'qubits': 11}\n",
+      "{'gate counts': {'cx': 3515, 't_dg': 1548, 'gphase': 50, 'ry': 2, 's_dg': 70, 't': 1173, 'u3': 750, 'z': 12, 'p': 193, 'cz': 150, 'h': 890, 'cy': 50, 'x': 377, 's': 70}, 'depth': 5134, 'qubits': 23}\n",
+      "(12, 17)\n"
+     ]
+    }
+   ],
    "source": [
     "BA_CKS = CKS(BA, eps=0.01, kappa=kappa)\n",
     "\n",
@@ -648,10 +760,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8c563103",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION via ``.inv(epsilon, kappa)``                                 \n",
+      " [0.02711972 0.5570811  0.53034627 0.63848101] \n",
+      "QUANTUM SIMULATION via CKS\n",
+      " [0.02711485 0.55709829 0.53035176 0.63846166] \n",
+      "CLASSICAL SOLUTION\n",
+      " [0.02944539 0.55423278 0.53013239 0.64102936]\n"
+     ]
+    }
+   ],
    "source": [
     "BA_inv = BA.inv(eps=0.01, kappa=kappa)\n",
     "\n",
@@ -694,10 +819,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7751d0be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kappa =  2.3333333333333335\n",
+      "{'gate counts': {'cx': 2504, 't_dg': 724, 'gphase': 66, 's_dg': 64, 't': 658, 'u3': 198, 'rx': 17, 'p': 98, 'h': 854, 'x': 197, 's': 262, 'measure': 198}, 'depth': 1980, 'qubits': 12}\n",
+      "{'gate counts': {'cx': 2564, 't_dg': 724, 'gphase': 66, 'ry': 2, 's_dg': 94, 't': 658, 'u3': 198, 'z': 16, 'p': 158, 'h': 914, 'x': 167, 's': 292, 'measure': 198}, 'depth': 2013, 'qubits': 28}\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -750,10 +885,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a558ca4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.805205574839392e+16\n"
+     ]
+    }
+   ],
    "source": [
     "N = 8\n",
     "I = np.eye(N)\n",
@@ -774,10 +917,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "67e43944",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CKS parameters: j_0 = 2309524379448826368\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp.algorithms.cks import cks_params\n",
     "j_0, _ = cks_params(0.01, np.linalg.cond(L_ill))\n",
@@ -796,10 +947,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6fba6fef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3333333333333335\n",
+      "CKS parameters: j_0 = 16\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.linalg.cond(L_well))\n",
     "j_0, _ = cks_params(0.01, np.linalg.cond(L_well))\n",
@@ -830,10 +990,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fc2235fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0: 0.7794808035635605, 1.0: 0.05048200055416087, 8.0: 0.05048196702654611, 2.0: 0.049593675225200494, 4.0: 0.04959366032403838, 12.0: 0.0032753857948143363, 3.0: 0.0032753825351851235, 9.0: 0.0032694129899430856, 6.0: 0.0032556955388927354, 5.0: 0.0032142859078645274, 10.0: 0.0032142786901141274, 7.0: 0.00021251084259239425, 14.0: 0.0002125107116251491, 13.0: 0.00021228250847641657, 11.0: 0.00021228182453635852, 15.0: 1.386596244939242e-05}\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
@@ -892,7 +1060,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Qrisp_BE",
+   "display_name": "qrisp_new_11",
    "language": "python",
    "name": "python3"
   },
