Replaced CKS schematics; imprived tutorials page; SEO for filtering tutorial

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -5,7 +5,7 @@
    "id": "34b89908",
    "metadata": {},
    "source": [
-    "# Filtered state preparation with GQSP\n",
+    "# Eigenstate filtering using quantum signal processing\n",
     "\n",
     "Ground state preparation is a fundamental task in quantum computation, serving as a cornerstone for simulating strongly correlated systems in chemistry, material sciences and physics.\n",
     "Understanding the ground state, i.e., the state of lowest energy, is essential for predicting a system's stability, electronic properties, and chemical reactivity.\n",
