Minor doc changes

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -852,7 +852,7 @@
    "id": "8d704beb",
    "metadata": {},
    "source": [
-    "## Motivation for BE 202\n",
+    "## Motivation for BE 201\n",
     "\n",
     "Feeling like you mastered the BlockEncodings class? Good. Now let's use it on some state-of-the-art research applications. In the next tutorial, we move from simple algebra to transforming a matrix’s entire spectrum using Quantum Signal Processing (QSP).\n",
     "\n",
@@ -872,7 +872,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Qrisp_BE",
+   "display_name": "qrisp_new_11",
    "language": "python",
    "name": "python3"
   },
