--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -852,7 +852,7 @@
    "id": "8d704beb",
    "metadata": {},
    "source": [
-    "## Motivation for BE 201\n",
+    "## Motivation for BlockEncoding class 201: Qubitization, Chebyshev polynomials, QSP\n",
     "\n",
     "Feeling like you mastered the BlockEncodings class? Good. Now let's use it on some state-of-the-art research applications. In the next tutorial, we move from simple algebra to transforming a matrix’s entire spectrum using Quantum Signal Processing (QSP).\n",
     "\n",
